syntax = "proto3";
package file;

option go_package = "../";

service FileService {
    rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
}

message UploadFileRequest {
    bytes file = 1;
    string file_name=2;
}

message UploadFileResponse {
    string url = 1;
}